style page home

--- a/src/css/utilities/colors.css
+++ b/src/css/utilities/colors.css
@@ -12,11 +12,11 @@
   --cor-10: #1f1f1f;
   --cor-11: #121212;
   --cor-12: #000000;
-  --cor-p1: #ffbb00;
-  --cor-p2: #e5a40b;
-  --cor-p3: #a66f00;
-  --cor-p4: #664400;
-  --cor-p5: #332200;
+  --cor-p1: #3785BD;
+  --cor-p2: #2A7EC7;
+  --cor-p3: #1445A6;
+  --cor-p4: #0F1F6B;
+  --cor-p5: #060645;
 }
 
 .cor-0 {
