--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,4 @@
 @import "css/utilities/colors.css";
 @import "css/utilities/components.css";
 @import "css/utilities/typography.css";
+@import "css/pages/home.css"
