--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -8,16 +8,16 @@
 .btn {
   display: inline-block;
   padding: 16px 32px;
-  background: linear-gradient(#ffbf00, #f2a50c);
+  background: linear-gradient(var(--cor-p1), var(--cor-p3));
   border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border: none;
   text-transform: uppercase;
-  color: var(--cor-p5);
+  color: var(--cor-1);
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
 .btn:hover {
-  background: linear-gradient(#ffb60d, #e59317);
+  background: linear-gradient(var(--cor-p2), var(--cor-p3));
 }
 
 @media (max-width: 600px) {
