--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,7 @@
 @import "css/global/global.css";
 @import "css/utilities/colors.css";
 @import "css/utilities/components.css";
+@import "css/utilities/form.css";
 @import "css/utilities/typography.css";
-@import "css/pages/home.css"
+@import "css/pages/home.css";
+@import "css/pages/editAddress.css"
